Add some requirements

--- a/_posts/2023-11-06-day1.md
+++ b/_posts/2023-11-06-day1.md
@@ -12,6 +12,92 @@ This day is mostly dedicated to trace a path: What I want?
 # DONE
 In Day1 I manage to ...
 
-## Something achieved
+## HW description
 
-![Image]({{ "/assets/img/first_failure.png" | relative_url }})
+## Requirements
+
+Create a family usable home NAS powered by openSUSE.
+
+Family requirements:
+
+ - Hey dad the disk is almost full on mum Windows7 laptop, where I can move her documents to install XYZ (SAMBA mount, maybe quota folder)
+
+ - Hey dad where we have my picture of my 6th birthday party? I'm doing a presentation for school using my keyboard computer (PI-500 ARM)
+
+ - Hey dear are we sure we will not loose any of our holiday photos? Should I print all of them? (backup system?)
+
+ - Is the NAS broken? I have signed contract to send in the Documents folder in 5mins (high availability?)
+
+ - Hey dear, there's all the night a box with a blue led blinking in the broom closet. How much we pay for that in electricity?
+
+ - Oh- Oh-Oh I'm Santa Clause : how asked a new 12TB disk and 32GB RAM stick (expand-ability)
+
+### Requirements for eng
+
+Here a more formal list of requirements. At this point the HW is what it is so the focus in this list is about what I can get by properly selecting and configuring the SW part of my NAS.
+
+#### Data integrity
+
+I mostly use the NAS to store all the family "assets":
+ - mostly photos both in JPEG and RAW format.
+ - some videos and audio recording
+
+The most important requirement here is not to loose any bit of them.
+In particular I like to protect my digital memory against:
+- HW disk failures
+- data corruption
+- accidental user delete, modify, move or rename files
+
+It probably make sense to describe how the media archive is going to be used:
+- We periodically add more files.
+- We practically never delete old photos.
+- Files in this pool are relatively rarely read, it could happens that sometimes we create some projects based on them like some photo book or that we look for an old memory just for fun.
+
+#### Usability
+
+The NAS is mind to sit in a corner, powered H24 (but I can change my mind about it) and connected to the main network switch of the house.
+Users will need to access it through network from both linux and win machines.
+It is better if users can see the data (even just one or multiple subset of it) like it was an internal or external disk. So I suppose I need SAMBA and eventually NFS. I'm not sure what to do about access managements yet.
+
+
+#### LTS
+
+I like to install and configure an OS and related SW that should least for at least 10 years.
+
+#### Low energy
+
+This requirement is here but always considering that probably most of the difference is in selecting the HW more than configuring the SW.
+
+#### Low maintenance effort
+
+I asked my wife to hire an IT specialist to maintain the storage infrastructure but she say that I should be able to do it from my own :-(
+
+#### Security
+
+The main focus here to is the data integrity. I think it also relevant to consider that I do not need to access my data from outside my home network.
+Has to be reasonably simple and safe (from the data integrity point of view) to keep the OS up to date.
+
+#### Backups
+
+For the moment anyone at home is implementing or not implementing a backup strategy from its own. 
+
+### Not so important
+
+#### "Hyperdrive" bandwidth
+
+The limiting factor here is probably the network. It if Wifi5 and cable (some CAT5 cables in the sealing connected to some 1GigE switch of PC ports).
+
+#### High availability
+
+I'll not loose money for each minutes of downtime :-). I like the high availability but data integrity is more important.
+
+#### Remote access
+
+I do not need to neither write or read or generally speaking interact with the NAS from outside my home network.
+
+## On the shoulders of others
+
+Read some existing documentation
+
+## Experiment on KVM
+
