--- a/_posts/2023-11-06-day1.md
+++ b/_posts/2023-11-06-day1.md
@@ -14,6 +14,25 @@ In Day1 I manage to ...
 
 ## HW description
 
+
+ - Topton N5105 Mini-ITX motherboard
+ - CPU Jasper Lake Intel® Celeron® Processor N5105 CPU (Base: 2.0Ghz, Burst 2.9Ghz, TDP: 10W)
+ - 32GB Ram DDR4 + 16GB DDR4 (as I manage to buy a wrong second stick)
+ - 128GB M.2 NVME SSD (after buy not one but two M.2 SATA 120GB disks that, as SATA and not NVME, does not works on the internal M.2 slot on the motherboard!!!)
+ - NVMe M.2 500GB disk
+ - 3x 4TB spin disks
+ - 1x 4T used spin disk
+
+The HW assembled outside its case looks like:
+
+![Image]({{ "/assets/img/IMG_20230923_115142_web.jpg" | relative_url }})
+
+
+and here with everything squeezed in a nice case:
+
+![Image]({{ "/assets/img/IMG_20231106_175451_web.jpg" | relative_url }})
+
+
 ## Requirements
 
 Create a family usable home NAS powered by openSUSE.
