Complete day 1 page

--- a/_posts/2023-11-06-day1.md
+++ b/_posts/2023-11-06-day1.md
@@ -114,9 +114,6 @@ I'll not loose money for each minutes of downtime :-). I like the high availabil
 
 I do not need to neither write or read or generally speaking interact with the NAS from outside my home network.
 
-## On the shoulders of others
-
-Read some existing documentation
-
 ## Experiment on KVM
 
+Create a VM with 4 cores, a 40GB OS disk and 3x20GB data disks. Install MicroOS. Create a RAID1 BTRFS filesystem over the 3 data disks. Frite some random data on them to fill them up.
