Ignition/combustion and virt-install

--- a/_posts/2023-11-06-day1.md
+++ b/_posts/2023-11-06-day1.md
@@ -14,6 +14,7 @@ In Day1 I manage to ...
 
 ## HW description
 
+The HW available on my desk is:
 
  - Topton N5105 Mini-ITX motherboard
  - CPU Jasper Lake Intel® Celeron® Processor N5105 CPU (Base: 2.0Ghz, Burst 2.9Ghz, TDP: 10W)
@@ -23,10 +24,9 @@ In Day1 I manage to ...
  - 3x 4TB spin disks
  - 1x 4T used spin disk
 
-The HW assembled outside its case looks like:
+This HW assembled outside its case looks like:
 
 ![Image]({{ "/assets/img/IMG_20230923_115142_web.jpg" | relative_url }})
-
 
 and here with everything squeezed in a nice case:
 
@@ -35,7 +35,7 @@ and here with everything squeezed in a nice case:
 
 ## Requirements
 
-Create a family usable home NAS powered by openSUSE.
+**Create a family home NAS powered by openSUSE.**
 
 Family requirements:
 
@@ -53,19 +53,19 @@ Family requirements:
 
 ### Requirements for eng
 
-Here a more formal list of requirements. At this point the HW is what it is so the focus in this list is about what I can get by properly selecting and configuring the SW part of my NAS.
+Here a more formal list of requirements. At this point the HW part is what it is. So the focus in this list of requirements is more about what I can get by properly selecting and configuring the SW part of the NAS.
 
 #### Data integrity
 
-I mostly use the NAS to store all the family "assets":
- - mostly photos both in JPEG and RAW format.
+NAS is mostly used to store all the family "assets":
+ - mostly photos both in JPEG and RAW format
  - some videos and audio recording
 
 The most important requirement here is not to loose any bit of them.
 In particular I like to protect my digital memory against:
 - HW disk failures
 - data corruption
-- accidental user delete, modify, move or rename files
+- accidental delete, modify, move or rename files
 
 It probably make sense to describe how the media archive is going to be used:
 - We periodically add more files.
@@ -74,18 +74,17 @@ It probably make sense to describe how the media archive is going to be used:
 
 #### Usability
 
-The NAS is mind to sit in a corner, powered H24 (but I can change my mind about it) and connected to the main network switch of the house.
+The NAS is mind to sit in a corner, powered H24 (but I can change my mind about it if I manage to obtain a WOL setup) and connected to the main network switch of the house.
 Users will need to access it through network from both linux and win machines.
 It is better if users can see the data (even just one or multiple subset of it) like it was an internal or external disk. So I suppose I need SAMBA and eventually NFS. I'm not sure what to do about access managements yet.
 
-
 #### LTS
 
-I like to install and configure an OS and related SW that should least for at least 10 years.
+I like to install and configure an OS and related SW with at least 10 years of support.
 
 #### Low energy
 
-This requirement is here but always considering that probably most of the difference is in selecting the HW more than configuring the SW.
+I know, I know: this is more an HW requirement than a SW one.
 
 #### Low maintenance effort
 
@@ -93,14 +92,16 @@ I asked my wife to hire an IT specialist to maintain the storage infrastructure 
 
 #### Security
 
-The main focus here to is the data integrity. I think it also relevant to consider that I do not need to access my data from outside my home network.
+The main focus here too is the data integrity. I think it also relevant to consider that I do not need to access my data from outside my home network.
 Has to be reasonably simple and safe (from the data integrity point of view) to keep the OS up to date.
+
+
+### Not so important
+Here a list of stuff that I'll not consider important for this project.
 
 #### Backups
 
-For the moment anyone at home is implementing or not implementing a backup strategy from its own. 
-
-### Not so important
+For the moment anyone at home is implementing or not implementing a backup strategy from its own.
 
 #### "Hyperdrive" bandwidth
 
@@ -116,4 +117,4 @@ I do not need to neither write or read or generally speaking interact with the N
 
 ## Experiment on KVM
 
-Create a VM with 4 cores, a 40GB OS disk and 3x20GB data disks. Install MicroOS. Create a RAID1 BTRFS filesystem over the 3 data disks. Frite some random data on them to fill them up.
+I made some experiment with KVM to have some fun at the end of the day. I created a VM with 4 cores, a 40GB OS disk and 3x20GB data disks. Install MicroOS. Create a RAID1 BTRFS filesystem over the 3 data disks. Write some random data on them to fill them up.
