Fix links and add BTRFS

--- a/_posts/2023-11-07-day2.md
+++ b/_posts/2023-11-07-day2.md
@@ -16,15 +16,14 @@ On the shoulders of others
 ## Previous ZFS hackweeks
 
 Read some existing documentation linked to previous Hackweeks
-- https://hackweek.opensuse.org/23/projects/suse-on-open-zfs
+- [suse-on-open-zfs](https://hackweek.opensuse.org/23/projects/suse-on-open-zfs)
 
 ## BTRFS reading
 
-Read through the official BTRFS wiki
-- https://btrfs.readthedocs.io
+Read through the official [BTRFS wiki](https://btrfs.readthedocs.io)
 
 Are there openQA tests about BTRFS?
-Yes, most of them are using (XFSTESTS)[https://github.com/kdave/xfstests]
+Yes, most of them are using [XFSTESTS](https://github.com/kdave/xfstests)
 
 
 ### Archlinux wiki
@@ -59,7 +58,7 @@ It is possible to add devices to a multiple-device file system later on.
 
 Devices can be of different sizes. However, if one drive in a RAID configuration is bigger than the others, this extra space will not be used.
 
-Btrfs does not automatically read from the fastest device: mixing different kinds of disks results in inconsistent performance. [cite]](https://stackoverflow.com/a/55408367)
+Btrfs does not automatically read from the fastest device: mixing different kinds of disks results in inconsistent performance. [cite](https://stackoverflow.com/a/55408367)
 
 [#RAID](https://wiki.archlinux.org/title/btrfs#RAID) is about maintenance of multi-device Btrfs file systems.
 
@@ -67,7 +66,7 @@ Btrfs does not automatically read from the fastest device: mixing different kind
 
  - [BTRFS](https://wiki.gentoo.org/wiki/Btrfs)
 
-btrfs is licensed under the [GPL](https://en.wikipedia.org/wiki/GNU_General_Public_License "wikipedia:GNU General Public License") and open for contribution from anyone.
+btrfs is licensed under the [GPL](https://en.wikipedia.org/wiki/GNU_General_Public_License) and open for contribution from anyone.
 
 
 ## ZFS reading
@@ -80,10 +79,9 @@ Talk with friends and colleague that has DIY home NAS.
 
 ### Mr Brrr
 
-He uses zfs on his home server and he really like it.
+He uses zfs on his home server and he really likes it.
 
 He is using ZFS on Ubuntu (but would probably use Debian now) and docker on an old HP microserver gen 8.
-
 
 
 ```
@@ -130,7 +128,7 @@ He define himself a not a heavy user. He is using ZFS on TrueNAS
 Yep. I have one 4 disk  pool in RaidZ-2
 
 #### Have you ever try to expand a pool adding new disks? Or generally speaking expanding the space adding new disks?
-I remember that was exactly a problem with ZFS that it is not as flexible as btrfs with changing raid levels and disk numbers. So you can be quite stuck with the layout you are starting with. Replacing disks with bigger ones one by one should not be an issue. I was adding lately 2x4tb disks but they ended up in new pool since they would not fit into existing 4x1TB pool.
+I remember that was exactly a problem with ZFS that it is not as flexible as BTRFS with changing raid levels and disk numbers. So you can be quite stuck with the layout you are starting with. Replacing disks with bigger ones one by one should not be an issue. I was adding lately 2x4tb disks but they ended up in new pool since they would not fit into existing 4x1TB pool.
 
 #### Have you ever experienced how zfs behaves if a disk break?
 This one is a weird thing. the 4x1TB disks are probably 10+ years old and still doing fine. Didn't have a failure since they were bought. But on the other hand that NAS is running 24/7 only maybe last 3 years. Previously I used it mostly as NAS storage for cold data and had a WOL setup when the sever would be woken up by router or kodi instance upon access.
