--- a/_posts/2023-11-08-day3.md
+++ b/_posts/2023-11-08-day3.md
@@ -26,13 +26,12 @@ I'm mostly interested in the immutable part of that: I think it can improve syst
 ## Ignition and combustion
 
 Some good reading:
- - HowTo: https://en.opensuse.org/Portal:MicroOS/Ignition#Ignition_Quick_Start
- - How to use ignition with `virt-install` https://balagetech.com/install-opensuse-microos-kvm-ignition/
- - How to use combustion https://pdostal.cz/2022/02/19/installing-opensuse-microos-and-tumbleweed-in-qemu/
- - Create ignition/combustion based qcow image for jumphost https://confluence.suse.com/pages/viewpage.action?pageId=1305018506
+ - HowTo: [Ignition_Quick_Start](https://en.opensuse.org/Portal:MicroOS/Ignition#Ignition_Quick_Start)
+ - How to use ignition with `virt-install` [install-opensuse-microos-kvm-ignition](https://balagetech.com/install-opensuse-microos-kvm-ignition/)
+ - How to use combustion [installing-opensuse-microos-and-tumbleweed-in-qemu](https://pdostal.cz/2022/02/19/installing-opensuse-microos-and-tumbleweed-in-qemu/)
 
 
-### Ignition 'n combusition
+### Ignition 'n combustion
 
 They are one alternative to the other. Ignition is a json file and combustion is a bash script. So ignition is maybe a little bit simpler but less flexible. Let's use it to:
 
@@ -95,7 +94,7 @@ Here as reference my `config.ign` file
 
 A small note about the `storage` section: it seems only to be needed due to the MicroOS configuration. There's this note in the `fuel-ignition` webpage
 
-![Image]({{ "/assets/img/assets/img/20231108113906.png" | relative_url }})
+![Image]({{ "/assets/img/20231108113906.png" | relative_url }})
 
 This toggle is about adding a section in the ignition json like:
 
@@ -117,10 +116,9 @@ This toggle is about adding a section in the ignition json like:
 
 Not selecting it result in ssh as root not to work even if the deployment looks like ok. Digging in the log of the first boot:
 
-![Image]({{ "/assets/img/assets/img/20231108114019.png" | relative_url }})
+![Image]({{ "/assets/img/20231108114019.png" | relative_url }})
 
 How this problem has to be addressed using `combustion`?
-
 
 
 ## virt-install
@@ -202,3 +200,171 @@ Or using the qcow2 and `combustion`
 
 
 ## Play with BTRFS
+
+### Create a raid pool
+
+RAID in BTRFS start at the formatting command, where multiple devices can be provided to it to create a pool.
+
+BTRFS support different kind of RAID mode with different level of stability.
+
+BTRFS allow to create a RAID pool for the data or for the metadata separately.
+
+```shell
+% mkfs.btrfs -f -L "Arca" -d raid1 -m raid1 /dev/sda /dev/sdb /dev/sdc
+
+btrfs-progs v6.5.1
+See https://btrfs.readthedocs.io for more information.
+
+Performing full device TRIM /dev/sdc (30.00GiB) ...
+Performing full device TRIM /dev/sda (30.00GiB) ...
+Performing full device TRIM /dev/sdb (30.00GiB) ...
+NOTE: several default settings have changed in version 5.15, please make sure
+      this does not affect your deployments:
+      - DUP for metadata (-m dup)
+      - enabled no-holes (-O no-holes)
+      - enabled free-space-tree (-R free-space-tree)
+
+Label:              Arca
+UUID:               5ce9855b-9680-469a-b790-4297e6f73648
+Node size:          16384
+Sector size:        4096
+Filesystem size:    90.00GiB
+Block group profiles:
+  Data:             RAID1             1.00GiB
+  Metadata:         RAID1             1.00GiB
+  System:           RAID1             8.00MiB
+SSD detected:       no
+Zoned device:       no
+Incompat features:  extref, skinny-metadata, no-holes, free-space-tree
+Runtime features:   free-space-tree
+Checksum:           crc32c
+Number of devices:  3
+Devices:
+   ID        SIZE  PATH
+    1    30.00GiB  /dev/sda
+    2    30.00GiB  /dev/sdb
+    3    30.00GiB  /dev/sdc
+```
+
+![Image]({{ "/assets/img/20231106181757.png" | relative_url }})
+
+![Image]({{ "/assets/img/20231106181748.png" | relative_url }})
+
+Now it is time to mount it. It works by just mounting one of the devices
+
+```shell
+% mount /dev/sda /mnt/
+```
+
+At this point
+
+```shell
+% lsblk -f
+NAME   FSTYPE FSVER LABEL UUID                                 FSAVAIL FSUSE% MOUNTPOINTS
+sda    btrfs        Arca  5ce9855b-9680-469a-b790-4297e6f73648     29G     2% /mnt
+sdb    btrfs        Arca  5ce9855b-9680-469a-b790-4297e6f73648
+sdc    btrfs        Arca  5ce9855b-9680-469a-b790-4297e6f73648
+```
+
+notice as UUID is the same across all devices in the RAID array
+
+### Play with some btrfs commands
+
+#### device scan
+
+```shell
+% btrfs device scan
+
+Scanning for Btrfs filesystems
+registered: /dev/vda3
+registered: /dev/sdb
+registered: /dev/sdc
+registered: /dev/sda
+```
+
+#### device stats
+
+``` shell
+% btrfs device stats /dev/sda
+
+[/dev/sda].write_io_errs    0
+[/dev/sda].read_io_errs     0
+[/dev/sda].flush_io_errs    0
+[/dev/sda].corruption_errs  0
+[/dev/sda].generation_errs  0
+```
+
+#### filesystem show
+
+```shell
+% btrfs filesystem show /mnt/
+Label: none  uuid: a0c0cb3b-6eed-48cd-ad13-6658dd7818d2
+        Total devices 3 FS bytes used 144.00KiB
+        devid    1 size 30.00GiB used 0.00B path /dev/sda
+        devid    2 size 30.00GiB used 2.01GiB path /dev/sdb
+        devid    3 size 30.00GiB used 2.01GiB path /dev/sdc
+
+```
+
+#### filesystem usage
+
+Keep in mind that results from `df` and `du` are not so important when using BTRFS. The native BTRFS alternative is:
+
+```shell
+% btrfs filesystem usage /mnt/
+
+Overall:
+    Device size:                  19.98GiB
+    Device allocated:              3.52GiB
+    Device unallocated:           16.45GiB
+    Device missing:                  0.00B
+    Device slack:                  3.50KiB
+    Used:                          1.21GiB
+    Free (estimated):             18.31GiB      (min: 10.08GiB)
+    Free (statfs, df):            18.31GiB
+    Data ratio:                       1.00
+    Metadata ratio:                   2.00
+    Global reserve:                5.50MiB      (used: 0.00B)
+    Multiple profiles:                  no
+
+Data,single: Size:3.01GiB, Used:1.15GiB (38.25%)
+   /dev/vda3       3.01GiB
+
+Metadata,DUP: Size:256.00MiB, Used:31.27MiB (12.21%)
+   /dev/vda3     512.00MiB
+
+System,DUP: Size:8.00MiB, Used:16.00KiB (0.20%)
+   /dev/vda3      16.00MiB
+
+Unallocated:
+   /dev/vda3      16.45GiB
+```
+
+
+
+### Scrub
+
+```shell
+% btrfs scrub start /mnt
+scrub started on /mnt, fsid 56c0cabd-349e-4ad1-8bfe-cb25fcf5ce89 (pid=1986)
+
+
+% btrfs scrub status /mnt
+UUID:             56c0cabd-349e-4ad1-8bfe-cb25fcf5ce89
+Scrub started:    Wed Nov  8 15:41:01 2023
+Status:           finished
+Duration:         0:00:00
+Total to scrub:   304.00KiB
+Rate:             0.00B/s
+Error summary:    no errors found
+```
+
+You can also scrub per device
+
+### Balance
+
+```shell
+% btrfs balance start --full-balance /mnt/
+Done, had to relocate 3 out of 3 chunks
+```
+
