--- a/_posts/2023-11-08-day3.md
+++ b/_posts/2023-11-08-day3.md
@@ -137,6 +137,10 @@ The ISO is [here](https://download.opensuse.org/tumbleweed/appliances/iso/openSU
 ### Ignition and combustion in KVM
 
 #### Provision as disk
+In [this](https://rootco.de/2020-12-09-microos-pi-network-monitor/) article there's a section about doing it in a physical machine with a USB driver
+
+But I'm more interested in doing it for a VM
+
 Create a small disk image
 ```
 truncate --size=10M ignition_disk.img
